--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -65,7 +65,7 @@
     "react/style-prop-object": [2],
     "react/void-dom-elements-no-children": "error",
     "react/jsx-child-element-spacing": "error",
-    "react/jsx-closing-bracket-location": [2, "after-props"],
+    "react/jsx-closing-bracket-location": [2, "tag-aligned"],
     "react/jsx-closing-tag-location": "error",
     "react/jsx-curly-brace-presence": [2, "never"],
     "react/jsx-uses-react": "error",
