--- a/jsconfig.json
+++ b/jsconfig.json
@@ -13,7 +13,8 @@
       "@actions/*": ["./src/store/actions/*"],
       "@actionTypes/*": ["./src/store/actionTypes/*"],
       "@contexts/*": ["./src/contexts/*"],
-      "@hooks/*": ["./src/hooks/*"]
+      "@hooks/*": ["./src/hooks/*"],
+      "@images/*": ["./public/images/*"]
     }
   },
   "exclude": ["node_modules", "dist"]
